--- a/Day 1/lesson-3-mlflow/mlflow- Experiment Tracking.ipynb
+++ b/Day 1/lesson-3-mlflow/mlflow- Experiment Tracking.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -48,27 +48,7 @@
     "id": "Eeoktt5XOcCv",
     "outputId": "2fb94b4e-7a83-4868-fe55-e2e786f81030"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Temperature  Humidity  PM2.5  PM10   NO2   SO2    CO  \\\n",
-      "0         29.8      59.1    5.2  17.9  18.9   9.2  1.72   \n",
-      "1         28.3      75.6    2.3  12.2  30.8   9.7  1.64   \n",
-      "2         23.1      74.7   26.7  33.8  24.4  12.6  1.63   \n",
-      "3         27.1      39.1    6.1   6.3  13.5   5.3  1.15   \n",
-      "4         26.5      70.7    6.9  16.0  21.9   5.6  1.01   \n",
-      "\n",
-      "   Proximity_to_Industrial_Areas  Population_Density Air Quality  \n",
-      "0                            6.3                 319    Moderate  \n",
-      "1                            6.0                 611    Moderate  \n",
-      "2                            5.2                 619    Moderate  \n",
-      "3                           11.1                 551        Good  \n",
-      "4                           12.7                 303        Good  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the dataset from a CSV file\n",
     "df = pd.read_csv('air_quality.csv')  # Replace with the path to your CSV file\n",
@@ -112,19 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "id": "WD79ugSM1tQN"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.948 0.948699773521202 0.948 0.9479213062383529\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define model hyperparameters\n",
     "params = {\n",
@@ -220,8 +192,8 @@
    },
    "outputs": [],
    "source": [
-    "# # Set the experiment name\n",
-    "# mlflow.set_experiment('Air_Quality_Experiment')"
+    "# Set the experiment name\n",
+    "mlflow.set_experiment('Air_Quality_Experiment')"
    ]
   },
   {
@@ -249,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -257,19 +229,7 @@
     "id": "nTaFatVFHOoX",
     "outputId": "5f60689d-c1b3-4464-c1e4-06decfa88413"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.9480\n",
-      "Precision: 0.9487\n",
-      "Recall: 0.9480\n",
-      "F1 Score: 0.9479\n",
-      "Model saved in run: b9ab91a25dcf44209604b2bebcc25115\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Start MLflow run\n",
     "with mlflow.start_run():\n",
@@ -301,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -309,15 +269,7 @@
     "id": "slhlNgW0SQEy",
     "outputId": "42250ac9-b545-4204-d184-e1aec5e414bd"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment with name 'Air_Quality_Experiment' not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the experiment ID\n",
     "experiment_name = 'Air_Quality_Experiment'\n",
@@ -374,20 +326,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "id": "PNlUsn_e1tQZ",
     "outputId": "638abe9f-28b7-4824-cfcb-11ef87a9b9fc"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.948\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred = loaded_model.predict(X_test)\n",
     "\n",
@@ -395,13 +339,6 @@
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(accuracy)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
